--- a/digi/package.json
+++ b/digi/package.json
@@ -10,17 +10,42 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@material-tailwind/react": "^2.1.9",
+    "@react-google-maps/api": "^2.19.3",
+    "@syncfusion/ej2-react-navigations": "^25.2.4",
+    "bootstrap": "^5.3.3",
+    "components": "^0.1.0",
+    "ejs": "^3.1.10",
+    "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.2.6",
+    "google-map-react": "^2.2.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
+    "react-responsive-modal": "^6.4.2",
+    "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.11",
+    "taos": "^1.0.5",
+    "typed-js": "^0.2.3",
+    "typed.js": "^2.1.0",
+    "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
